--- a/OnlineShoppingStore.WebUI/Views/Product/List.cshtml
+++ b/OnlineShoppingStore.WebUI/Views/Product/List.cshtml
@@ -5,11 +5,17 @@
 
 @foreach (var p in Model.Products)
 {
-    <h3>@p.Name</h3>
-    <h4>@p.Price.ToString("C")</h4>
-    @p.Description
+   <div class="well">
+       <h3>
+           <strong>@p.Name</strong>
+           <span class="pull-right label label-primary">@p.Price.ToString("C")</span>
+       </h3>
+       <span class="lead">@p.Description</span>
+   </div>
+   
+    
 }
 
-<div>
+<div class="btn-group pull-right">
     @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
 </div>
