--- a/OnlineShoppingStore.WebUI/Views/Product/List.cshtml
+++ b/OnlineShoppingStore.WebUI/Views/Product/List.cshtml
@@ -5,14 +5,8 @@
 
 @foreach (var p in Model.Products)
 {
-   <div class="well">
-       <h3>
-           <strong>@p.Name</strong>
-           <span class="pull-right label label-primary">@p.Price.ToString("C")</span>
-       </h3>
-       <span class="lead">@p.Description</span>
-   </div>
-   
+
+   @Html.Partial("ProductSummary",p)
     
 }
 
