--- a/OnlineShoppingStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/OnlineShoppingStore.WebUI/Views/Shared/_Layout.cshtml
@@ -13,9 +13,9 @@
     </div>
     <div class="row panel ">
         <div id="Categoris" class="col-lg-3">
-            Categories
+            @Html.Action("Menu","Nav")
         </div>
-        <div class="col-lg-7">
+        <div class="col-lg-9">
             @RenderBody()
         </div>
     </div>
