--- a/OnlineShoppingStore.WebUI/Views/Cart/Index.cshtml
+++ b/OnlineShoppingStore.WebUI/Views/Cart/Index.cshtml
@@ -1,17 +1,20 @@
 ﻿@model OnlineShoppingStore.WebUI.Models.CartIndexViewModel
-
+<style>
+    #cartTable td{vertical-align:middle}
+</style>
 @{
     ViewBag.Title = "Sports Stroe:Your Cart";
 }
 
 <h2>Your cart </h2>
-<table class="table">
+<table id="cartTable" class="table">
     <thead>
         <tr>
             <th>Quantity</th>
             <th>Item</th>
             <th class="text-right">Price</th>
             <th class="text-right">Subtotal</th>
+            <td class="text-center col-lg-1 "></td>
         </tr>
     </thead>
     <tbody>
@@ -22,12 +25,33 @@
                 <td class="text-center">@line.Product.Name</td>
                 <td class="text-right">@line.Product.Price.ToString("C")</td>
                 <td class="text-right">@((@line.Quanlity*@line.Product.Price).ToString("C"))</td>
+             
+                <td>
+                    @using (Html.BeginForm("RemoveFromCart", "Cart"))
+                    {
+                        @Html.Hidden("ProductId",line.Product.ProductID)
+                        @Html.HiddenFor(x => x.ReturnUrl)
+                        <input class="btn btn-sm btn-warning" type="submit" value="Remove"/>                        
+                    }
+                </td>
             </tr>
         }
     </tbody>
+    <tfoot>
+        <tr>
+            <td colspan="3" class="text-right">Total:</td>
+            <td class="text-right">
+                @Model.Cart.ComputeTotalValue().ToString("C")
+            </td>
+        </tr>
+    </tfoot>
 </table>
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">
         Continue Shopping
     </a>
+    @Html.ActionLink("Checkout now","Checkout",null,
+    new{
+        @class="btn btn-primary"
+    })
 </div>
