--- a/OnlineShoppingStore.WebUI/Views/Shared/ProductSummary.cshtml
+++ b/OnlineShoppingStore.WebUI/Views/Shared/ProductSummary.cshtml
@@ -10,7 +10,7 @@
         <div class="pull-right" >
             @Html.HiddenFor(x=>x.ProductID)
             @Html.Hidden("returnUrl",Request.Url.PathAndQuery)
-            <input type="submit"  class="btn btn-success" value="Add to cart"/>
+            <input type="submit"  class="btn btn-success" value="Add to Cart"/>
         </div>
     }
     <span class="lead">@Model.Description</span>
