--- a/OnlineShoppingStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/OnlineShoppingStore.WebUI/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 <body>
     <div class="navbar navbar-inverse" role="navigation">
         <a class="navbar-brand" href="#">Online Shopping Store</a>
+        @Html.Action("Summary","Cart")
     </div>
     <div class="row panel ">
         <div id="Categoris" class="col-lg-3">
